test/src/e2e_vm_tests/test_programs/should_fail/reserved_identifiers/src/main.sw
script;

fn main() {
    let mut script = 0;
    let mut contract = 0;
    let mut predicate = 0;
    let mut library = 0;
    let mut mod = 0;
    let mut pub = 0;
    let mut use = 0;
    let mut as = 0;
    let mut struct = 0;
    let mut enum = 0;
    let mut self = 0;
    let mut fn = 0;
    let mut trait = 0;
    let mut impl = 0;
    let mut for = 0;
    let mut abi = 0;
    let mut const = 0;
    let mut storage = 0;
    let mut str = 0;
    let mut asm = 0;
    let mut return = 0;
    let mut if = 0;
    let mut else = 0;
    let mut match = 0;
    let mut mut = 0;
    let mut let = 0;
    let mut while = 0;
    let mut where = 0;
    let mut ref = 0;
    let mut deref = 0;
    let mut true = 0;
    let mut false = 0;
    let mut panic = 0;
}
